--- a/AgapeaDAM/AgapeaDAM.csproj
+++ b/AgapeaDAM/AgapeaDAM.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\images\avataresClientes\" />
   </ItemGroup>
 
 </Project>
