--- a/AgapeaDAM/AgapeaDAM.csproj
+++ b/AgapeaDAM/AgapeaDAM.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\Pedido\" />
     <Folder Include="wwwroot\images\avataresClientes\" />
   </ItemGroup>
 
